fix blog slider on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1854,7 +1854,7 @@ input[type="button"].open-btn {
 	text-align: center;
 	font-size: 14px;
 	color: #fff;
-	padding: 13px;
+	padding: 15px;
 }
 
 .btn-plus:hover {
